fix window corner clipping, close button appearance add <Cone>

--- a/src/base.css
+++ b/src/base.css
@@ -16,6 +16,7 @@ body {
   position: absolute;
   border-radius: 0.8em;
   box-shadow:0 0.4em 0.8em #0008;
+  overflow: hidden;
 }
 .Window__title {
   position: absolute;
@@ -28,7 +29,15 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  background: transparent;
+  border-width: 0;
 }
 .Window__closer::after {
   content: '\0000d7';
+}
+
+.Cone {
+  width: 150px;
+  height: 150px;
+  background-image: conic-gradient( white, black, white);
 }
